Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | IF LP error RP Stmt ELSE Stmt
   37     | IF LP error RP Stmt
   38     | WHILE LP error RP Stmt
   39     | RETURN error SEMI
   40     | error Stmt

   41 DefList: Def DefList
   42        | %empty

   43 Def: Specifier DecList SEMI
   44    | Specifier DecList error SEMI
   45    | Specifier error SEMI

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp

   50 Exp: Exp ASSIGNOP Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp ADD Exp
   55    | Exp SUB Exp
   56    | Exp MUL Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | SUB Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT
   68    | LP error RP
   69    | Exp LB error RB

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 22 27 36 37 38 39 40 44 45 68 69
    INT <type_int> (258) 19 66
    FLOAT <type_float> (259) 67
    ADD <type_op> (260) 54
    SUB <type_op> (261) 55 59
    MUL <type_op> (262) 56
    DIV <type_op> (263) 57
    DOT <type_op> (264) 64
    NOT <type_op> (265) 60
    AND <type_op> (266) 51
    OR <type_op> (267) 52
    ID <type_id> (268) 15 17 18 20 21 61 62 64 65
    SEMI <type_sym> (269) 4 5 7 8 30 32 39 43 44 45
    COMMA <type_sym> (270) 10 23 47 70
    ASSIGNOP <type_sym> (271) 49 50
    RELOP <type_sym> (272) 53
    TYPE <type_type> (273) 11
    LC <type_brac> (274) 13 26
    RC <type_brac> (275) 13 26 27
    LB <type_brac> (276) 19 63 69
    RB <type_brac> (277) 19 63 69
    LP <type_brac> (278) 20 21 33 34 35 36 37 38 58 61 62 68
    RP <type_brac> (279) 20 21 22 33 34 35 36 37 38 58 61 62 68
    STRUCT <type_key> (280) 13 14
    RETURN <type_key> (281) 32 39
    IF <type_key> (282) 33 34 36 37
    ELSE <type_key> (283) 34 36
    WHILE <type_key> (284) 35 38
    MINUS (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <root> (33)
        on left: 1
        on right: 0
    ExtDefList <root> (34)
        on left: 2 3
        on right: 1 2
    ExtDef <root> (35)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList <root> (36)
        on left: 9 10
        on right: 4 10
    Specifier <root> (37)
        on left: 11 12
        on right: 4 5 6 7 25 43 44 45
    StructSpecifier <root> (38)
        on left: 13 14
        on right: 12
    OptTag <root> (39)
        on left: 15 16
        on right: 13
    Tag <root> (40)
        on left: 17
        on right: 14
    VarDec <root> (41)
        on left: 18 19
        on right: 9 10 19 25 48 49
    FunDec <root> (42)
        on left: 20 21 22
        on right: 6
    VarList <root> (43)
        on left: 23 24
        on right: 20 23
    ParamDec <root> (44)
        on left: 25
        on right: 23 24
    CompSt <root> (45)
        on left: 26 27
        on right: 6 31
    StmtList <root> (46)
        on left: 28 29
        on right: 26 28
    Stmt <root> (47)
        on left: 30 31 32 33 34 35 36 37 38 39 40
        on right: 28 33 34 35 36 37 38 40
    DefList <root> (48)
        on left: 41 42
        on right: 13 26 41
    Def <root> (49)
        on left: 43 44 45
        on right: 41
    DecList <root> (50)
        on left: 46 47
        on right: 43 44 47
    Dec <root> (51)
        on left: 48 49
        on right: 46 47
    Exp <root> (52)
        on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 30 32 33 34 35 49 50 51 52 53 54 55 56 57 58 59 60 63 64 69 70 71
    Args <root> (53)
        on left: 70 71
        on right: 61 70


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    7 ExtDef: Specifier error . SEMI
   22 FunDec: error . RP

    SEMI  shift, and go to state 22
    RP    shift, and go to state 23


State 16

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 24

    $default  reduce using rule 18 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 25


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 22

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 23

   22 FunDec: error RP .

    $default  reduce using rule 22 (FunDec)


State 24

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 34
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 25

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 26

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 19


State 27

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


State 28

   27 CompSt: error . RC

    RC  shift, and go to state 41


State 29

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 33


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   43 Def: Specifier . DecList SEMI
   44    | Specifier . DecList error SEMI
   45    | Specifier . error SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 32

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 33

   41 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 42 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 33


State 34

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 35

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 49


State 36

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 37

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 24 (VarList)


State 38

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 39

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 41

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 42

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    SUB     shift, and go to state 56
    NOT     shift, and go to state 57
    ID      shift, and go to state 58
    LC      shift, and go to state 29
    LP      shift, and go to state 59
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 43

   45 Def: Specifier error . SEMI

    SEMI  shift, and go to state 67


State 44

   19 VarDec: VarDec . LB INT RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 27

    $default  reduce using rule 48 (Dec)


State 45

   43 Def: Specifier DecList . SEMI
   44    | Specifier DecList . error SEMI

    error  shift, and go to state 69
    SEMI   shift, and go to state 70


State 46

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 46 (DecList)


State 47

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 48

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


State 49

   19 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 25 (ParamDec)


State 50

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 51

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 72
    ParamDec         go to state 37


State 52

   19 VarDec: VarDec LB INT RB .
